--- a/FrontMoneyMentor/src/app/components/autenticador/autenticador.css
+++ b/FrontMoneyMentor/src/app/components/autenticador/autenticador.css
@@ -27,29 +27,28 @@ width: 20%;
 .navbar ul li a {
     text-decoration: none !important;
 }
-header a, header li, header nav {
-  pointer-events: auto !important;
+.custom-field {
+  width: 100%;
 }
-.button-group{
+.button-group {
   display: flex;
-  justify-content: center; 
-  gap: 15px; /* Espacio entre botones */
+  justify-content: center;
+  gap: 15px;
   margin-top: 20px;
 }
 
 .page-background {
-  background: url('/assets/img/fondo_landing.jpg') center/cover no-repeat fixed;
-  min-height: 100vh;
-
+ min-height: 100vh;
+  padding-top: 8rem;
+  background: linear-gradient(rgba(16,16,16,0.6), rgba(16,16,16,0.6)),
+  url('/assets/img/fondo_landing.jpg') center/cover no-repeat fixed;
   display: flex;
   justify-content: center;
   align-items: center;
-
-  padding-top: 90px; /* 👈 separa contenido del header */
-  pointer-events: auto;
-  position: relative;
-  z-index: 1;
+  text-align: center;
+  color: #fff;
 }
+
 
 .example-full-width{
   width: 100%;
@@ -59,6 +58,7 @@ header a, header li, header nav {
 /* ========================= */
 /* HEADER */
 /* ========================= */
+
 header {
   width: 100%;
   height: 70px;
@@ -66,22 +66,23 @@ header {
   position: fixed;
   top: 0;
   left: 0;
-  z-index: 9999;
+  z-index: 999;
   padding: 0 0rem;
   display: flex;
   align-items: center;
   justify-content: space-between;
-  pointer-events: auto; /* Asegura clics */
-
 }
+
 header .logo img {
   width: 55px;
 }
+
 header .navbar ul {
   list-style: none;
   display: flex;
   gap: 2rem;
 }
+
 header .navbar ul li a {
   color: #fff;
   font-size: 1.4rem;
@@ -89,9 +90,11 @@ header .navbar ul li a {
   padding: 20 2rem;
   margin-right: 20px;
 }
+
 header .navbar ul li a:hover {
   color: #FF8343;
 }
+
 header .fa-bars {
   font-size: 3rem;
   color: #FF8343;
