--- a/FrontMoneyMentor/src/app/components/operacion/operacion-listar/operacion-list.html
+++ b/FrontMoneyMentor/src/app/components/operacion/operacion-listar/operacion-list.html
@@ -1,13 +1,17 @@
 <div class="container mat-elevation-z8">
-  <div style="text-align: center; margin: 5%"><h2>Lista de Operaciones</h2></div>
+  <div style="text-align: center; margin: 5%">
+    <h2>Lista de Operaciones</h2>
+  </div>
+
   <table mat-table [dataSource]="dataSource">
+
     <!-- ID -->
     <ng-container matColumnDef="c1">
       <th mat-header-cell *matHeaderCellDef>ID</th>
       <td mat-cell *matCellDef="let element">{{ element.idOperacion }}</td>
     </ng-container>
 
-    <!-- Categoria -->
+    <!-- Categoría -->
     <ng-container matColumnDef="c2">
       <th mat-header-cell *matHeaderCellDef>Categoría</th>
       <td mat-cell *matCellDef="let element">{{ element.categoria }}</td>
@@ -37,28 +41,29 @@
       <td mat-cell *matCellDef="let element">{{ element.detalle }}</td>
     </ng-container>
 
-    <!-- Usuario ID -->
+    <!-- Usuario -->
     <ng-container matColumnDef="c7">
-      <th mat-header-cell *matHeaderCellDef>nombre usuario</th>
+      <th mat-header-cell *matHeaderCellDef>Nombre usuario</th>
       <td mat-cell *matCellDef="let element">
         {{ element.usuario?.nombre }}
       </td>
-
-      <ng-container matColumnDef="c8">
-        <th mat-header-cell *matHeaderCellDef>Actualizar</th>
-        <td mat-cell *matCellDef="let element">
-          <button mat-icon-button color="primary" [routerLink]="['edits', element.idOperacion]">
-            <mat-icon>edit</mat-icon>
-          </button>
-        </td>
-      </ng-container>
     </ng-container>
 
+    <!-- Actualizar -->
+    <ng-container matColumnDef="c8">
+      <th mat-header-cell *matHeaderCellDef>Actualizar</th>
+      <td mat-cell *matCellDef="let element">
+        <button mat-icon-button color="primary" [routerLink]="['edits', element.idOperacion]">
+          <mat-icon>edit</mat-icon>
+        </button>
+      </td>
+    </ng-container>
+
+    <!-- Eliminar -->
     <ng-container matColumnDef="c9">
       <th mat-header-cell *matHeaderCellDef>Eliminar</th>
       <td mat-cell *matCellDef="let element">
-        <button mat-icon-button color="primary" 
-        (click)="eliminar(element.idOperacion)">
+        <button mat-icon-button color="warn" (click)="eliminar(element.idOperacion)">
           <mat-icon>delete</mat-icon>
         </button>
       </td>
@@ -66,5 +71,6 @@
 
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
     <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+
   </table>
 </div>
