Actualizar rutas y corregir enlaces en el menú de operaciones; mejorar la navegación hacia la lista de impuestos.

--- a/FrontMoneyMentor/src/app/components/menu/menu.html
+++ b/FrontMoneyMentor/src/app/components/menu/menu.html
@@ -100,10 +100,10 @@
     <button mat-menu-item routerLink="/app/roles/nuevo">Registrar Rol</button>
   </mat-menu>
 
-  <mat-menu #menuImpuesto="matMenu">
-    <button mat-menu-item routerLink="/app/Impuesto">Listar mpuesto</button>
+   <mat-menu #menuImpuesto="matMenu">
+    <button mat-menu-item routerLink="/app/impuesto/list">Listar impuesto</button>
     <button mat-menu-item routerLink="/app/impuesto/nuevo">registrar impuestos</button>
-  </mat-menu>
+  </mat-menu>
 
   <mat-menu #menuReporte="matMenu">
     <button mat-menu-item routerLink="/app/listarmes">Balance por mes</button>
